--- a/NodeJS_Course/views/shop.ejs
+++ b/NodeJS_Course/views/shop.ejs
@@ -1,24 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/main.css">
+<%- include('includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <header class="main-header">
-        <nav class="main-header__nav">
-            <ul class="main-header__item-list">
-                <li class="main-header__item"><a class="active" href="/">Shop</a></li>
-                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('includes/navigation.ejs') %>
 
     <main>
         <% if (products.length > 0) { %>
@@ -26,7 +11,7 @@
                 <% for (let product of products) { %> 
                     <article class="card product-item">
                         <header class="card__header">
-                            <h1 class="product__title"><%= product %></h1>
+                            <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
                             <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book">
@@ -45,6 +30,4 @@
             <h1>No Products Found</h1>
         <% } %>
     </main>
-</body>
-
-</html>
+<%- include('includes/end.ejs') %> 
