--- a/NodeJS_Course/public/css/main.css
+++ b/NodeJS_Course/public/css/main.css
@@ -34,6 +34,10 @@ form {
   align-items: center;
 }
 
+.centered {
+  text-align: center;
+}
+
 .main-header__item-list {
   list-style: none;
   margin: 0;
