--- a/NodeJS_Course/views/shop/cart.ejs
+++ b/NodeJS_Course/views/shop/cart.ejs
@@ -5,17 +5,25 @@
         <%- include('../includes/navigation.ejs') %>
         <main>
             <% if (products.length > 0) { %>
-                <ul>
+                
+                <ul class="centered">
                     <% products.forEach(p => { %>
             
-                        <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                        <p><%= p.title %> (<%= p.cartItem.quantity %>)</p>
                         <form action="/cart-delete-item" method="POST">
-                            <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                            <input type="hidden" value="<%= p.id %>" name="productId">
                             <button class="btn" type="submit">Delete</button>
                         </form>
                         
                     <% }) %> 
                 </ul>
+                <hr>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button class="btn" type="submit">Order</button>
+                    </form>
+                </div>
+                
             <% } else { %> 
                 <h1>No Products in Cart!</h1>
             <% } %>
