--- a/NodeJS_Course/views/shop/cart.ejs
+++ b/NodeJS_Course/views/shop/cart.ejs
@@ -9,9 +9,9 @@
                 <ul class="centered">
                     <% products.forEach(p => { %>
             
-                        <p><%= p.title %> (<%= p.quantity %>)</p>
+                        <p><%= p.productId.title %> (<%= p.quantity %>)</p>
                         <form action="/cart-delete-item" method="POST">
-                            <input type="hidden" value="<%= p._id %>" name="productId">
+                            <input type="hidden" value="<%= p.productId._id %>" name="productId">
                             <button class="btn" type="submit">Delete</button>
                         </form>
                         
