--- a/NodeJS_Course/views/includes/navigation.ejs
+++ b/NodeJS_Course/views/includes/navigation.ejs
@@ -26,21 +26,22 @@
                 </li>
             <% } %>
         </ul>
-        
-            <ul class="main-header__item-list">
-                <% if (!isAuthenticated) { %>
+        <ul class="main-header__item-list">
+            <% if (!isAuthenticated) { %>
                 <li class="main-header__item">
                     <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
                 </li>
-                <% } else { %>
+                <li class="main-header__item">
+                    <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+                </li>
+            <% } else { %>
                 <li class="main-header__item">
                     <form action="/logout" method="post">
                         <button type="submit">Logout</button>
                     </form>
                 </li>
-                <% } %>
-            </ul>
-        
+            <% } %>
+        </ul>
     </nav>
 </header>
 
@@ -66,6 +67,20 @@
             <li class="mobile-nav__item">
                 <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
                 </a>
+            </li>
+        <% } %>
+        <% if (!isAuthenticated) { %>
+            <li class="mobile-nav__item">
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+            </li>
+            <li class="mobile-nav__item">
+                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+            </li>
+        <% } else { %>
+            <li class="mobile-nav__item">
+                <form action="/logout" method="post">
+                    <button type="submit">Logout</button>
+                </form>
             </li>
         <% } %>
     </ul>
