--- a/NodeJS_Course/public/css/main.css
+++ b/NodeJS_Course/public/css/main.css
@@ -248,6 +248,10 @@ form {
   color: red;
 }
 
+.pagination {
+  text-align: center;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
