--- a/NodeJS_Course/views/shop/index.ejs
+++ b/NodeJS_Course/views/shop/index.ejs
@@ -30,19 +30,7 @@
                     </article>
                 <% } %>
             </div>
-            <section class="pagination">
-                <% if (currentPage != 1) { %>
-                    <a href="/?page=1">1</a>
-                <% } %>
-                <a href="/?page=<%= currentPage %>" class="active"><%= currentPage %></a>
-                <% if (hasNextPage) { %>
-                    <a href="/?page=<%= nextPage %>"><%= nextPage %></a>
-                <% } %>
-                <% if (lastPage !== currentPage && nextPage !== lastPage) { %>
-                    <a href="/?page=<%= lastPage %>" ><%= lastPage %></a>
-                <% } %>
-                
-            </section>
+            <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage}) %>
         <% } else { %>
             <h1>No Products Found!</h1>
         <% } %>
